# PaleMirror

./: .gitignore  CMakeLists.txt  JOGO  makefile
dep/: AIController.d  Animation.d  Animator.d  Bullet.d  Camera.d  Character.d  Collider.d  Collision.d  Component.d  EndState.d  Game.d  GameData.d  GameObject.d  Gun.d  HealthHUD.d  HitAttack.d  InputManager.d  IsoCollider.d  IsoRect.d  Line.d  Music.d  PlayerController.d  Ray.d  Rect.d  Resources.d  ShadowCaster.d  Sound.d  Sprite.d  SpriteRenderer.d  StageState.d  State.d  Text.d  TileMap.d  TileSet.d  Timer.d  TitleState.d  Vec2.d  Wave.d  WaveSpawner.d  Zombie.d  (+1 more)
include/: AIController.h  Animator.h  Bullet.h  Camera.h  Character.h  Collider.h  Collision.h  Component.h  EndState.h  Game.h  GameData.h  GameObject.h  Gun.h  HealthHUD.h  HitAttack.h  InputManager.h  IsoCollider.h  IsoRect.h  Line.h  MirrorPuzzle.h  Music.h  PlayerController.h  Ray.h  Rect.h  ShadowCaster.h  Sound.h  Sprite.h  SpriteRenderer.h  StageState.h  State.h  Text.h  TileMap.h  TileSet.h  TitleState.h  Vec2.h  Wave.h  WaveSpawner.h  Zombie.h
include/actions/: Action.h  Actions.h  BackStateAction.h  ChangeRoomAction.h  DocumentAction.h  NewStateAction.h  TeleportAction.h
include/components/: AIController.h  Animator.h  Camera.h  FusePuzzle.h  HealthHUD.h  Interactable.h  InteractableHUD.h  LightEmitter.h  MirrorPuzzle.h  PlayerController.h  RunaRitual.h  Sound.h  SpriteRenderer.h  TileMap.h  TileSet.h  WaveSpawner.h
include/core/: Game.h  GameData.h  GameObject.h  Music.h  Sprite.h  State.h
include/hud/: DebugHUD.h  DialogueHUD.h  DocumentHUD.h  FlashlightHUD.h  HealthHUD.h  InteractableHUD.h  InventoryHUD.h  PauseHUD.h
include/math/: IsoRect.h  Line.h  Ray.h  Rect.h  Vec2.h
include/physics/: Collider.h  Collision.h  IsoCollider.h  ShadowCaster.h
include/rooms/: ArtsClassRoom.h  BanheiroDem.h  BanheiroDemRoom.h  BanheiroFemininoRoom.h  BanheiroIntroRoom.h  BanheiroMasculinoRoom.h  ClassroomRoom.h  DiretorRoom.h  HistoryClassRoom.h  MainRoom.h  PortugueseClassRoom.h  ProfessoresRoom.h  Room.h  ScienceClassRoom.h
include/states/: ClassRoomState.h  EndState.h  LoadState.h  StageState.h  TitleState.h
include/utils/: Animation.h  DrawCircle.h  InputManager.h  Resources.h  Text.h  TextHUD.h  Timer.h
src/: AIController.cpp  Animation.cpp  Animator.cpp  Bullet.cpp  Camera.cpp  Character.cpp  Collider.cpp  Component.cpp  EndState.cpp  Game.cpp  GameData.cpp  GameObject.cpp  Gun.cpp  HealthHUD.cpp  HitAttack.cpp  InputManager.cpp  IsoCollider.cpp  IsoRect.cpp  Line.cpp  MirrorPuzzle.cpp  Music.cpp  PlayerController.cpp  Ray.cpp  Rect.cpp  Resources.cpp  ShadowCaster.cpp  Sound.cpp  Sprite.cpp  SpriteRenderer.cpp  StageState.cpp  State.cpp  Text.cpp  TileMap.cpp  TileSet.cpp  Timer.cpp  TitleState.cpp  Vec2.cpp  Wave.cpp  WaveSpawner.cpp  Zombie.cpp  (+1 more)
src/actions/: Actions.cpp  BackStateAction.cpp  ChangeRoomAction.cpp  DocumentAction.cpp  NewStateAction.cpp  TeleportAction.cpp
src/components/: AIController.cpp  Animator.cpp  Camera.cpp  DialogueHUD.cpp  FusePuzzle.cpp  HealthHUD.cpp  Interactable.cpp  InteractableHUD.cpp  LightEmitter.cpp  MirrorPuzzle.cpp  PaintPuzzle.cpp  PipePuzzle.cpp  PlayerController.cpp  RunaRitual.cpp  Sound.cpp  SpriteRenderer.cpp  TileMap.cpp  TileSet.cpp  WaveSpawner.cpp
src/core/: Component.cpp  Game.cpp  GameData.cpp  GameObject.cpp  Music.cpp  Sprite.cpp  State.cpp
src/hud/: DebugHUD.cpp  DialogueHUD.cpp  DocumentHUD.cpp  FlashlightHUD.cpp  HealthHUD.cpp  InteractableHUD.cpp  InventoryHUD.cpp  PauseHUD.cpp
src/math/: IsoRect.cpp  (+4 more)
(+62 files in other folders)
